// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip alignment right-aligned 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
    display: block;
    visibility: visible;
  }

  to {
    visibility: hidden;
    display: none;
    -webkit-transform: translateY(-1rem);
    -ms-transform: translateY(-1rem);
    transform: translateY(-1rem);
    opacity: 0;
  }
}

@keyframes animation-0 {
  from {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
    display: block;
    visibility: visible;
  }

  to {
    visibility: hidden;
    display: none;
    -webkit-transform: translateY(-1rem);
    -ms-transform: translateY(-1rem);
    transform: translateY(-1rem);
    opacity: 0;
  }
}

@keyframes animation-0 {
  from {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
    display: block;
    visibility: visible;
  }

  to {
    visibility: hidden;
    display: none;
    -webkit-transform: translateY(-1rem);
    -ms-transform: translateY(-1rem);
    transform: translateY(-1rem);
    opacity: 0;
  }
}

.emotion-2 {
  position: relative;
}

.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  right: 0;
  position: absolute;
  max-width: 100%;
  padding: 0.5rem;
  margin-top: 1rem;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: 0 0 0.25rem 0 rgba(0,0,0,0.08),0 0.5rem 0.5rem 0 rgba(0,0,0,0.08),0 1rem 1rem 0 rgba(0,0,0,0.08);
  -webkit-animation: animation-0 0.4s ease-in-out;
  animation: animation-0 0.4s ease-in-out;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  will-change: transform;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}

.emotion-1,
.emotion-1::after {
  color: #142c37;
}

.emotion-1::after {
  right: 1rem;
  content: "";
  position: absolute;
  bottom: 100%;
  height: 0;
  width: 0;
  pointer-events: none;
  border-style: solid;
  border-color: transparent;
  border-bottom-color: #fff;
  border-width: 0.5rem;
}

<div
  aria-hidden={false}
  className="emotion-2"
  id="test-id"
  role="tooltip"
>
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      Hi, I'm a Tooltip
    </p>
  </div>
</div>
`;

exports[`Tooltip renders as active when defined 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
    display: block;
    visibility: visible;
  }

  to {
    visibility: hidden;
    display: none;
    -webkit-transform: translateY(-1rem);
    -ms-transform: translateY(-1rem);
    transform: translateY(-1rem);
    opacity: 0;
  }
}

@keyframes animation-0 {
  from {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
    display: block;
    visibility: visible;
  }

  to {
    visibility: hidden;
    display: none;
    -webkit-transform: translateY(-1rem);
    -ms-transform: translateY(-1rem);
    transform: translateY(-1rem);
    opacity: 0;
  }
}

.emotion-2 {
  position: relative;
}

.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  left: 0;
  position: absolute;
  max-width: 100%;
  padding: 0.5rem;
  margin-top: 1rem;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: 0 0 0.25rem 0 rgba(0,0,0,0.08),0 0.5rem 0.5rem 0 rgba(0,0,0,0.08),0 1rem 1rem 0 rgba(0,0,0,0.08);
  -webkit-animation: animation-0 0.4s ease-in-out;
  animation: animation-0 0.4s ease-in-out;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  will-change: transform;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}

.emotion-1,
.emotion-1::after {
  color: #142c37;
}

.emotion-1::after {
  left: 1rem;
  content: "";
  position: absolute;
  bottom: 100%;
  height: 0;
  width: 0;
  pointer-events: none;
  border-style: solid;
  border-color: transparent;
  border-bottom-color: #fff;
  border-width: 0.5rem;
}

<div
  aria-hidden={false}
  className="emotion-2"
  id="test-id"
  role="tooltip"
>
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      Hi, I'm a Tooltip
    </p>
  </div>
</div>
`;

exports[`Tooltip renders as an error 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
    display: block;
    visibility: visible;
  }

  to {
    visibility: hidden;
    display: none;
    -webkit-transform: translateY(-1rem);
    -ms-transform: translateY(-1rem);
    transform: translateY(-1rem);
    opacity: 0;
  }
}

@keyframes animation-0 {
  from {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
    display: block;
    visibility: visible;
  }

  to {
    visibility: hidden;
    display: none;
    -webkit-transform: translateY(-1rem);
    -ms-transform: translateY(-1rem);
    transform: translateY(-1rem);
    opacity: 0;
  }
}

@keyframes animation-0 {
  from {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
    display: block;
    visibility: visible;
  }

  to {
    visibility: hidden;
    display: none;
    -webkit-transform: translateY(-1rem);
    -ms-transform: translateY(-1rem);
    transform: translateY(-1rem);
    opacity: 0;
  }
}

@keyframes animation-0 {
  from {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
    display: block;
    visibility: visible;
  }

  to {
    visibility: hidden;
    display: none;
    -webkit-transform: translateY(-1rem);
    -ms-transform: translateY(-1rem);
    transform: translateY(-1rem);
    opacity: 0;
  }
}

.emotion-2 {
  position: relative;
}

.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  left: 0;
  position: absolute;
  max-width: 100%;
  padding: 0.5rem;
  margin-top: 1rem;
  background-color: #ff4e64;
  border-radius: 4px;
  box-shadow: 0 0 0.25rem 0 rgba(0,0,0,0.08),0 0.5rem 0.5rem 0 rgba(0,0,0,0.08),0 1rem 1rem 0 rgba(0,0,0,0.08);
  -webkit-animation: animation-0 0.4s ease-in-out;
  animation: animation-0 0.4s ease-in-out;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  will-change: transform;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}

.emotion-1,
.emotion-1::after {
  color: #fff;
}

.emotion-1::after {
  left: 1rem;
  content: "";
  position: absolute;
  bottom: 100%;
  height: 0;
  width: 0;
  pointer-events: none;
  border-style: solid;
  border-color: transparent;
  border-bottom-color: #ff4e64;
  border-width: 0.5rem;
}

<div
  aria-hidden={false}
  className="emotion-2"
  id="test-id"
  role="tooltip"
>
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      Hi, I'm a Tooltip
    </p>
  </div>
</div>
`;

exports[`Tooltip renders hidden and left-aligned by default 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
    display: block;
    visibility: visible;
  }

  to {
    visibility: hidden;
    display: none;
    -webkit-transform: translateY(-1rem);
    -ms-transform: translateY(-1rem);
    transform: translateY(-1rem);
    opacity: 0;
  }
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  left: 0;
  position: absolute;
  max-width: 100%;
  padding: 0.5rem;
  margin-top: 1rem;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: 0 0 0.25rem 0 rgba(0,0,0,0.08),0 0.5rem 0.5rem 0 rgba(0,0,0,0.08),0 1rem 1rem 0 rgba(0,0,0,0.08);
  -webkit-animation: animation-0 0.4s ease-in-out;
  animation: animation-0 0.4s ease-in-out;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  will-change: transform;
}

.emotion-1,
.emotion-1::after {
  color: #142c37;
}

.emotion-1::after {
  left: 1rem;
  content: "";
  position: absolute;
  bottom: 100%;
  height: 0;
  width: 0;
  pointer-events: none;
  border-style: solid;
  border-color: transparent;
  border-bottom-color: #fff;
  border-width: 0.5rem;
}

.emotion-0 {
  margin-bottom: 0;
}

<div
  aria-hidden={true}
  className="emotion-2"
  id="test-id"
  role="tooltip"
>
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      Hi, I'm a Tooltip
    </p>
  </div>
</div>
`;
